[backend/frontend] Add pagination in exercise list and improv performance (#898)